# thesis

./: Cargo.toml
examples/: single_radar.rs
my_game/: Cargo.toml
my_game/src/: main.rs
src/: antenna_data.json  antenna_receiver.rs  components.rs  data.json  doppler_shift.rs  functions.rs  interaction_detection.rs  lib.rs  main.rs  movement.rs  rcs.rs  reflection.rs  systems.rs  transmit_signal.rs
src/data/: antenna.rs  em_wave.rs  illumination.rs  mod.rs  position.rs  rcs.rs  velocity.rs
src/ecs/: mod.rs
src/ecs/components/: antenna.rs  em_wave.rs  mod.rs  position.rs  rcs.rs  target_illumination.rs  velocity.rs
src/ecs/systems/: antenna_receiver.rs  doppler_shift.rs  interaction_detection.rs  jamming.rs  mod.rs  movement.rs  rcs.rs  reflection.rs  transmit_signal.rs
src/ecs_sim/: antenna_receiver.rs  components.rs  doppler_shift.rs  interaction_detection.rs  jamming.rs  mod.rs  movement.rs  rcs.rs  reflection.rs  transmit_signal.rs
src/functions/: calculate_range.rs  calculate_rcs.rs  check_illumination.rs  doppler_shift.rs  incident_angle.rs  mod.rs  move_entity.rs  rotate_entity.rs
src/structs/: em_wave.rs  gain.rs  structs.rs  target_illumination.rs
src/systems/: antenna_receiver.rs  doppler_shift.rs  interaction_detection.rs  jamming.rs  mod.rs  movement.rs  rcs.rs  reflection.rs  systems.rs  transmit_signal.rs
tests/: transmission_test.rs
