[package]
name = "my_game"
version = "0.1.0"
authors = ["Brennen Garland <bgarland015@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = "0.16.1"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }