[package]
name = "radar_ecs"
version = "0.1.0"
authors = ["Brennen Garland <bgarland015@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = { version = "0.16.1", features = ["specs-derive"] }
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}